<resources>
    <string name="app_name">Khabrein</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Khabrein...</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="genral">Genral</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="source">source</string>
    <string name="imagenews">imagenews</string>
    <string name="urlimage">urlimage</string>
</resources>