<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Genral"
            android:icon="@drawable/ic_genral"
            android:title="@string/genral" />

        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/ic_tech"
            android:title="@string/technology" />

        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_business"
            android:title="@string/business" />

        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/ic_health"
            android:title="@string/health" />


        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/ic_entertain"
            android:title="@string/entertainment" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_sports"
            android:title="@string/sports" />

    </group>
</menu>