<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_Genral">

    <fragment
        android:id="@+id/nav_Genral"
        android:name="com.example.khabrein.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.khabrein.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_entertainment"
        android:name="com.example.khabrein.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_technology"
        android:name="com.example.khabrein.ui.Technology"
        android:label="fragment_technology"
        tools:layout="@layout/fragment_technology" />
    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.khabrein.ui.Sports"
        android:label="fragment_sports"
        tools:layout="@layout/fragment_sports" />
    <fragment
        android:id="@+id/nav_health"
        android:name="com.example.khabrein.ui.Health"
        android:label="fragment_health"
        tools:layout="@layout/fragment_health" />
</navigation>